temporarily comment out banner images add fix for navigation not hiding on mobile

--- a/banner/_banner.scss
+++ b/banner/_banner.scss
@@ -3,17 +3,17 @@ $banner-gradient: linear-gradient(to right, #7d7e7d 0%,$color-blue 100%) !defaul
 $banner-image: "../images/img_preaching.jpg";
 
 //banner images - (move to custom!)
-.banner--flex.has-image.banner-image--default {
-	background-image: url($banner-image) !important;
-}
+// .banner--flex.has-image.banner-image--default {
+// 	background-image: url($banner-image) !important;
+// }
 
-.banner-image--about {
-	background-image: url("");
-}
+// .banner-image--about {
+// 	background-image: url("");
+// }
 
-.banner-image--forms {
-	background-image: url("");
-}
+// .banner-image--forms {
+// 	background-image: url("");
+// }
 
 .banner--flex {
 	display: flex;
